# kitchenware

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp
containers/: binary_node.h  binary_node_base.cpp  binary_node_base.h  binary_tree.h  binary_tree_base.cpp  binary_tree_base.h  binary_tree_impl.h  declarations.h  poly_tree.h
containers/balancing/: red_black.h
containers/errors/: value_exists_error.cpp
containers/views/: infix_view.h  postfix_view.h  prefix_view.h
kitchen/: electric_stove.cpp  electric_stove.h  gas_stove.cpp  gas_stove.h  kitchenware.cpp  kitchenware.h  saucepan.cpp  saucepan.h  slow_cooker.cpp  slow_cooker.h  stove.cpp  stove.h
src/: CMakeLists.txt
src/containers/: binary_tree.h  poly_tree.h
src/containers/balancing/: red_black.h
src/containers/errors/: value_exists_error.h
src/containers/views/: infix_view.h
src/kitchen/: electric_stove.cpp  gas_stove.h  kitchenware.cpp  saucepan.cpp  saucepan.h  slow_cooker.h  stove.cpp  stove.h
src/ui/: dialogue.cpp  dialogue.h
test/: CMakeLists.txt  tree_tests.cpp
ui/: dialogue.cpp  dialogue.h
views/: prefix_view.h
